--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section class="contact-section overflow-section" name="contact-form" id="contact-form" aria-label="contact form of site">
             <div>
                 <h2>Contact Me</h2>
-                <form action="POST" data-netlify="true" class="form-css" aria-label="contact form start from here">
+                <form action="POST" data-netlify="true" class="form-css" aria-label="contact form start from here" netlify>
                     <fieldset>
                         <legend>Your Name</legend>
                         <input id="first-name" name="first-name" type="text" class="input-30vw placeholder-css" placeholder="First Name" aria-label="first name" required>
