--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The photography site that display the photographs as sample and contact form">
+    <meta name="keywords" content="photography, photo, photograph, wedding photoshoot, birthday photoshoot, portfolio photoshoot, photoshoot">
+    <meta name="author" content="Adarsh Agrawal">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Static/navHeadStyle.css">
     <link rel="stylesheet" href="Static/gridStyle.css">
