--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="Static/gearStyle.css">
     <link rel="stylesheet" href="Static/contactStyle.css">
     <link rel="stylesheet" href="Static/footerStyle.css">
+    <link rel="icon" type="images/png" href="Media\icon\small_icon.png">
     <title>Fineart Photography</title>
 
     <!-- fonts used for headings -->
